k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
spec:
  selector:
    app: rest
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
