k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: psvpro.msc.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest
                port:
                  number: 3333
